--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,6 @@
         <title>Mi curriculum Vitae</title>
     </head>
     <body>
-        <div id="app">
-    
-        </div>
+        <div id="app"></div>
     </body>
 </html>
