--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Mi curriculum Vitae</title>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <title>Karla Agraz</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+        
+        <link rel="canonical" href="">
+        <meta name="author" content="Karla Agraz">
+        <link rel="manifest" href="assets/manifest.json">
+        <meta name="description" content="Karla Agraz. Desarrolladora web.">
+        <meta name="keywords" content="karla, agraz, frontend, react, javascript, css, html">
+
+        <meta name="twitter:card" content="summary_large__image">
+        <meta name="twitter:site" content="@csswoman">
+        <meta name="twitter:creater" content="@csswoman">
+        <meta name="twitter:title" content="Karla Agraz">
+        <meta name="twitter:description" content="Karla Agraz. Desarrolladora web.">
+        <meta name="twitter:image" content="">
+
+        <meta name="og:locale" content="en_US">
+        <meta name="og:type" content="website">
+        <meta name="og:title" content="Karla Agraz">
+        <meta name="og:description" content="Karla Agraz. Desarrolladora web.">
+        <meta name="og:url" content="">
+        <meta name="og:site_name" content="">
+        <meta name="od:image" content="">
+    
     </head>
     <body>
         <div id="app"></div>
